@@ -118,6 +118,7 @@ typedef struct {
 	pdo_dblib_err err;
 	unsigned assume_national_character_set_strings:1;
 	unsigned stringify_uniqueidentifier:1;
+	unsigned skip_empty_rowsets:1;
 } pdo_dblib_db_handle;
 
 typedef struct {
@@ -150,6 +151,7 @@ enum {
 	PDO_DBLIB_ATTR_QUERY_TIMEOUT,
 	PDO_DBLIB_ATTR_STRINGIFY_UNIQUEIDENTIFIER,
 	PDO_DBLIB_ATTR_VERSION,
+	PDO_DBLIB_ATTR_SKIP_EMPTY_ROWSETS,
 };
 
 #endif
